交易雷達零權重資料源揭露：市場數值特徵與美債殖利率明示不進評分